<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECEDF1"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical" >

        <!-- 登录页面的图标 -->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="160dip"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/login_img" />

        <!-- 账号和密码和输入框 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/account"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_marginStart="15dip"
                android:layout_marginLeft="15dip"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/account_text"
                android:inputType="text"
                android:labelFor="@+id/account"
                android:maxLength="32"
                android:textColorHint="#CFD0D1"
                android:textSize="6pt"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_marginStart="15dip"
                android:layout_marginLeft="15dip"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/password_text"
                android:inputType="textPassword"
                android:labelFor="@+id/password"
                android:maxLength="32"
                android:textColorHint="#CFD0D1"
                android:textSize="6pt"
                android:typeface="monospace" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/login_btn_bg"
            android:text="@string/login_btn_text"
            android:textColor="#FFFFFF"
            android:textSize="6pt"
            android:typeface="monospace" />
    </LinearLayout>

    <TextView
        android:id="@+id/new_user"
        android:layout_width="wrap_content"
        android:layout_height="20dip"
        android:layout_marginBottom="10dip"
        android:layout_marginStart="12dip"
        android:layout_marginLeft="12dip"
        android:gravity="center_vertical"
        android:text="@string/new_user_text"
        android:textColor="#1BB5EF"
        android:textSize="5pt"
        android:typeface="monospace" />

</LinearLayout>